# xrpl-node-manager

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint  rippled.repo
service/: Cargo.toml  README.md
service/.github/workflows/: test.yml
service/config/: default.json  production.json  test.json
service/src/: enums.rs  handler.rs  logger.rs  main.rs  node.rs  rpc_client.rs  server.rs  settings.rs  structs.rs  worker.rs  ws.rs  ws_client.rs
service/src/lib/: date.rs  file.rs  mod.rs  util.rs
service/test/: rippled.cfg
ui/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: i18n.ts  main.ts  shims-vue.d.ts
ui/src/components/custom/: UiAlertIcon.vue  UiBox.vue  UiCheckbox.vue  UiDialog.vue  UiDropdown.vue  UiErrorBox.vue  UiErrorPopup.vue  UiHelpBox.vue  UiStepSection.vue  UiTickOrX.vue
ui/src/components/layout/: AppFooter.vue  AppHeader.vue
ui/src/enums/: config.ts  http.ts  index.ts  ws.ts
ui/src/interfaces/: State.ts
ui/src/layouts/default/: default.html  default.ts  index.vue
ui/src/locales/: en.json
ui/src/modules/404/: 404.css  404.html  404.ts  index.vue
ui/src/modules/Configuration/: Configuration.html  Configuration.ts  index.vue
ui/src/modules/Dashboard/: Dashboard.html  Dashboard.ts  index.vue
ui/src/modules/Stats/: Stats.html  Stats.ts  index.vue
ui/src/routes/: index.ts
ui/src/store/: index.ts
ui/src/types/: WsMessage.ts
ui/src/util/: HttpClient.ts  Tasker.ts  WorkerWrapper.ts  WsClient.ts  version.ts
ui/src/workers/: feed.worker.ts
(+1 files in other folders)
