[package]
name = "xrpl-node-manager"
version = "0.1.0"
authors = ["Javier Romero <elmurci@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.13.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_derive = "1.0.136"
tokio-stream = "0.1.9"
warp = "0.3"
url = "2.2.2"
tungstenite = "0.17.3"
futures = "0.3"
async-process = "1.4.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
thiserror = "1.0.31"
tracing = "0.1.35"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.14"
chrono = "0.4.19"
anyhow = "1.0.58"
fehler = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
async-std = { version = "1.0", features = ["attributes", "unstable"] }
reqwest = { version = "0.11.11", features = ["json"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.11", features = ["json"] }
